# swc-plugin-static-i18n

./: .gitignore  Cargo.toml  README.md  package.json  rust-toolchain.toml
src/: lib.rs
