[package]
name = "swc-plugin-static-i18n"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
crate-type = ["cdylib"]

[profile.release]
lto = true

# This removes more dead code
codegen-units = 1

# Optimize for size
opt-level = "s"
 
# Strip debug symbols
strip = "symbols"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_core = { version = "0.101.*", features = ["ecma_plugin_transform"] }
