[package]
name              = "swc_plugin_static_i18n"
version           = "0.1.0"
edition           = "2021"

[lib]
crate-type        = ["cdylib"]

[profile.release]
codegen-units     = 1
lto               = true
opt-level         = "s"
strip             = "symbols"

[dependencies]
serde             = { version = "1.0.203", features = ["derive"] }
serde_json        = { version = "1.0.117" }
swc_common        = { version = "0.37.3" }
swc_core          = { version = "0.101.2", features = ["ecma_plugin_transform"] }
swc_ecma_ast      = { version = "0.118.1" }
swc_ecma_utils    = { version = "0.134.1" }
swc_ecma_visit    = { version = "0.104.5" }
swc_plugin_macro  = { version = "0.9.16" }
tracing           = { version = "0.1.40" }